# plaid-solution-guide

./: .gitignore  CONTEXT.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  pyproject.toml  run-solution-guide-generator.sh
solution-guide-generator/: .gitignore  MANIFEST.in  README.md  pyproject.toml
solution-guide-generator/app/: __init__.py  config.py  main.py
solution-guide-generator/app/models/: requests.py  responses.py
solution-guide-generator/app/routers/: api.py
solution-guide-generator/app/services/: __init__.py  glean_client.py  guide_generator.py  prompt_builder.py
solution-guide-generator/app/static/: index.html
solution-guide-generator/scripts/: integration_test.py
solution-guide-generator/tests/: __init__.py  test_api.py  test_frontend_integration.py  test_glean_client.py  test_guide_generator.py  test_prompt_builder.py
solutions-guides/: README.md
transcripts/: README.md
