[project]
name = "explore"
version = "0.1.0"
description = "Plaid solutions exploration workspace"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["solution-guide-generator"]

[tool.uv.workspace]
members = ["solution-guide-generator"]

[tool.uv.sources]
"solution-guide-generator" = { workspace = true }

[tool.uv]
dev-dependencies = []
